# template-cmake

./: .editorconfig  CMakeLists.txt  CMakePresets.json  vcpkg.json
app/: CMakeLists.txt  main.cpp
doc/: doxyfile
test/: CMakeLists.txt  test_main.cpp
